# qtui

./: .gitignore  AGENTS.md  HANDOFF.md  IMPLEMENTATION_ROADMAP.md  MCP_IMPLEMENTATION_SUMMARY.md  README.md  debug_thinking_widgets.py  interactive_agent_console.py  pyproject.toml  setup_dev.py  test_focus_issue.py  test_input_layout.py  test_keyboard_shortcuts.py  test_widget_simple.py
docs/: HANDOFF.md  IMPLEMENTATION_ROADMAP.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION.md  README.md  WEBUI_IMPLEMENTATION_ROADMAP.md  agent_system_summary.md  backend_frontend_mapping.md  claude_code_architecture.md  qwen_tui_implementation_guide.md  testing_report.md
examples/: config.yaml  mcp_config.yaml
src/qwen_tui/: __init__.py  __main__.py  config.py  exceptions.py  history.py  logging.py
src/qwen_tui/agents/: __init__.py  base.py  factory.py  permissions.py  react.py
src/qwen_tui/backends/: __init__.py  base.py  lm_studio.py  manager.py  ollama.py  openrouter.py  vllm.py
src/qwen_tui/cli/: main.py  setup.py  wizard.py
src/qwen_tui/mcp/: __init__.py  adapter.py  client.py  discovery.py  exceptions.py  integration.py  models.py
src/qwen_tui/protocol/: __init__.py  client.py  models.py  server.py
src/qwen_tui/tools/: __init__.py  base.py  execution_tools.py  file_tools.py  registry.py  search_tools.py
src/qwen_tui/tui/: __init__.py  app.py  backend_panel.py  chat_handlers.py  chat_panel.py  input_panel.py  model_selector.py  permission_dialog.py  permission_manager.py  status_panel.py  styles.css  thinking.py  widgets.py
tests/: __init__.py  full_thinking_system_manual.py  test_backends.py  test_config.py  test_full_thinking_fixed.py  test_full_thinking_system.py  test_history.py  test_mcp_integration.py  test_protocol_thinking.py  test_simple_thinking.py  test_thinking_filter.py  test_thinking_integration.py  test_thinking_widgets.py  test_tui.py  test_tui_layout.py
